feat(solana-programs): remove I/O token mints from position (#119)
